# gh-pr-discussions

./: .gitignore  CLAUDE.md  GitHubDataPipeline.ipynb  RULES.md  analysis_report.md  comments_for_labeling.json  labeled_comments.json  mock_data.json  pr_discussions_cleaned.json
.devcontainer/: devcontainer.json
data/: comments_for_labeling.json  high_quality_repos.json  labeled_comments.json  pr_discussions_cleaned.json  pr_discussions_cleaned1.json  pr_discussions_example_v1.json  pr_discussions_test.json  transformed_repos.json
filtered_output/: filtered_output.json
model/: train_classifier.py
models/: best_classifier.pkl  model_info.json
scripts/: analyze_comments.py  extract.py  filter.py  high_quality_repos.json  label_comment.py  pipeline.py  pr_discussions_cleaned.json  pr_extraction.py  pyproject.toml  repo_discovery.py  shared_utils.py
scripts/critique-model/: SFT_trainer.py
scripts/data/: high_quality_repos.json
scripts/filtering/: comment_transform.py  repo_transform.py
scripts/formatting/: LLMSummary.py  codeDiff_display.py  combine_comments.py  comment_transform.py  download_json.py  model_data_transform.py  repo_transform.py
scripts/pipeline/: ST_filter_data.py  discover_repo.py  download_json.py  extract_prs.py  filter_codediff.py  fullpipeline.py  get_codediff.py  get_finetune_data.py  get_unfiltered_data.py  pr_extraction.py  repo_discovery.py  shared_utils.py  summarize_comments.py  transform_critique_data.py
scripts/sentence-transformer/: format_labeled_comments.py  label_comment.py  model_process_comments.py  train_classifier.py
(+25 files in other folders)
