[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "trl>=0.21.0",
    "xgboost>=3.0.3",
]
